--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=45", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "sa2va"
 version = "0.1.0"
@@ -8,16 +12,18 @@ dependencies = [
     "decord==0.6.0",
     "flash-attn==2.7.3",
     "google-genai>=1.25.0",
+    "gradio>=5.49.1",
     "hydra-core>=1.3.2",
     "octorun>=0.1.2",
     "openai>=1.97.1",
     "pycocotools>=2.0.10",
     "pycocoevalcap",
     "scikit-learn",
+    "setuptools",
     "tfd-utils>=0.2.4",
     "timm==1.0.17",
     "torch>=2.6.0",
-    "xtuner[deepspeed]==0.1.23",
+    "xtuner==0.1.23",
     "validators",
     "xlsxwriter",
     "tabulate",
@@ -30,7 +36,7 @@ dependencies = [
 
 [project.optional-dependencies]
 latest = [
-  "transformers==4.57.0",
+  "transformers==4.56.2",
   "peft==0.17.1",
 ]
 legacy = [
@@ -38,8 +44,10 @@ legacy = [
   "peft==0.11.1",
 ]
 
+[tool.setuptools]
+packages = ["projects", "vlm", "third_parts", "tools"]
+
 [tool.uv]
-no-build-isolation-package = ["flash-attn"]
 link-mode = "copy"
 conflicts = [
     [
@@ -49,6 +57,9 @@ conflicts = [
 ]
 
 [tool.uv.pip]
+find-links = [
+    "https://huggingface.co/lldacing/flash-attention-windows-wheel/resolve/main"
+]
 extra-index-url = [
     "https://download.pytorch.org/whl/cu124"
 ]
@@ -56,18 +67,12 @@ index-strategy = "unsafe-best-match"
 
 [tool.uv.sources]
 torch = [
-  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
-  { index = "pytorch-cu12", marker = "sys_platform == 'linux'" },
+  { index = "pytorch-cu12" },
 ]
 torchvision = [
-  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
-  { index = "pytorch-cu12", marker = "sys_platform == 'linux'" },
+  { index = "pytorch-cu12" },
 ]
-
-[[tool.uv.index]]
-name = "pytorch-cpu"
-url = "https://download.pytorch.org/whl/cpu"
-explicit = true
+flash-attn = { url = "https://huggingface.co/lldacing/flash-attention-windows-wheel/resolve/main/flash_attn-2.7.4+cu124torch2.6.0cxx11abiFALSE-cp311-cp311-win_amd64.whl", marker = "sys_platform == 'win32'" }
 
 [[tool.uv.index]]
 name = "pytorch-cu12"
@@ -86,9 +91,3 @@ requires-dist = [
 name = "flash-attn"
 version = "2.7.3"
 requires-dist = ["torch", "einops"]
-
-[tool.uv.extra-build-dependencies]
-flash-attn = [{ requirement = "torch", match-runtime = true }]
-
-[tool.uv.extra-build-variables]
-flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }
